// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. article summary headline component 1`] = `
<div
  aria-level="3"
  className="bigOne tc-text__TcText-sc-15igzev-0 lhcAkf"
  role="heading"
>
  PM hails breakthrough ahead of key Commons vote
</div>
`;

exports[`2. article summary strapline component 1`] = `
<div
  aria-level="4"
  className="tc-text__TcText-sc-15igzev-0 lhcAkf"
  role="heading"
>
  PM hails breakthrough ahead of key Commons vote
</div>
`;
